# qmlPluginClock

./: CMakeLists.txt  README.md
src/: Clock.qml  plugin.cpp  plugin.qrc
